Geometry Nodes: Viewer node ignores sockets #104297

Closed
opened 2023-02-02 10:14:13 +01:00 by Sun Kim · 4 comments
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.2.221130

Blender Version
Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-02-01 22:06, hash: d82ffb9787
Worked: n/a

Also confirmed in 3.4.1.

Short description of error
Viewer node ignores some output sockets when cycling through available sockets with {key Shift Ctrl LMB}.

This happens if the input node's Geometry output is not the first or second socket AND it's connected to the viewer. You can confirm this with Object Info node and custom group nodes.

Exact steps for others to reproduce the error
File for quick test:
ViewerNodeSocketIssue.blend

ViewerNodeIgnoresScaleSocket.mp4

ViewerNodeIgnoresSockets.mp4

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: Radeon RX 570 Series ATI Technologies Inc. 4.5.0 Core Profile Context 22.11.2.221130 **Blender Version** Broken: version: 3.5.0 Alpha, branch: master, commit date: 2023-02-01 22:06, hash: `d82ffb9787` Worked: n/a Also confirmed in 3.4.1. **Short description of error** Viewer node ignores some output sockets when cycling through available sockets with {key Shift Ctrl LMB}. This happens if the input node's Geometry output is not the first or second socket AND it's connected to the viewer. You can confirm this with Object Info node and custom group nodes. **Exact steps for others to reproduce the error** File for quick test: [ViewerNodeSocketIssue.blend](https://archive.blender.org/developer/F14239863/ViewerNodeSocketIssue.blend) [ViewerNodeIgnoresScaleSocket.mp4](https://archive.blender.org/developer/F14230840/ViewerNodeIgnoresScaleSocket.mp4) [ViewerNodeIgnoresSockets.mp4](https://archive.blender.org/developer/F14234959/ViewerNodeIgnoresSockets.mp4)
Author
Contributor

Added subscriber: @persun

Added subscriber: @persun
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Author
Contributor

Also reproducible with custom node groups.

ViewerNodeIgnoresSockets.mp4

As you can see it does not happen when the Geometry output is the first or second output.

Also reproducible with custom node groups. [ViewerNodeIgnoresSockets.mp4](https://archive.blender.org/developer/F14234959/ViewerNodeIgnoresSockets.mp4) As you can see it does not happen when the Geometry output is the first or second output.
Sun Kim changed title from Geometry Nodes: Viewer node ignores a socket to Geometry Nodes: Viewer node ignores sockets 2023-02-04 03:56:05 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-07 22:02:10 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#104297
No description provided.